# atspi-sys

./: .gitignore  Cargo.toml  Gir.toml  README.md  build.rs  cargotest  versions.txt
gir-files-18.04/: Atspi-2.0.gir
gir-files-19.10/: Atspi-2.0.gir
src/: accessible.rs  lib.rs  timeval.rs  timevalue.rs
tests/: abi.rs
