[package]
name = "atspi-sys"
version = "0.0.1"
links = "atspi"
edition = "2018"
keywords = ["libatspi", "accessibility", "a11y"]
build = "build.rs"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "atspi_sys"

[dependencies]
libc = "0.2"

[dependencies.gio_sys]
git = "https://github.com/gtk-rs/sys"
package = "gio-sys"

[dependencies.glib_sys]
git = "https://github.com/gtk-rs/sys"
package = "glib-sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
package = "gobject-sys"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_34 = []
dox = []
